# API_Expert_RobotFramework

./: .gitignore  Makefile  README.md  log.html  pyproject.toml  report.html  requirements.txt
Tests API/: Teste.robot  output.xml  post.robot
Tests API/Logs/: log.html  output.xml  report.html
TestsAPI/Logs/: log.html  output.xml  report.html
TestsAPI/Resources/: base.robot  database.robot  helpers.robot  output.xml  rabbitmq.robot  services.robot
TestsAPI/Resources/factories/: partner.py
TestsAPI/Tests/: delete.robot  get.robot  output.xml  post.robot  put.robot
api/: buger-eats-partner-model.txt.txt
