[tool.poetry]
name = "API-Expert"
version = "0.0.1"
description = ""
authors = ["Teste de Autor"]

[tool.poetry.dependencies]
python = "^3.10"
robot-mongodb-library = "^0.0.5"
robotframework-pythonlibcore = "^3.0.0"
robotframework-requests = "^0.9.2"
robotframework-robocop = "^2.0.2"
robotframework-seleniumlibrary = "^6.0.0"
robotframework-tidy = "^2.2"
selenium = "^4.1.5"
requests = "^2.27.1"
robotframework = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

